--- a/Página de Receita/style.css
+++ b/Página de Receita/style.css
@@ -28,6 +28,18 @@ img {
     border-radius: 16px;
 }
 
+main {
+    padding: 1.5rem;
+}
+
+section + section {
+    margin-top: 1.5rem;
+}
+
+section#about p + p {
+    margin-top: 0.75rem;
+}
+
 h1 {
     line-height: 140%;
     font-size: 2.5rem;
@@ -35,12 +47,18 @@ h1 {
 
 h2 {
     font-size: 1.5rem;
+    line-height: 150%;
 }
 
 h1, h2 {
     color: #291B1A;
+    margin-bottom: 0.25rem;
 }
 
-main {
-    padding: 1.5rem;
+ul {
+    padding-left: 1.5rem;
+}
+
+section#preparation p + p{
+    padding-top: 1rem;
 }
