--- a/Local Turístico/mediaquery.css
+++ b/Local Turístico/mediaquery.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 550px) {
     article#title-page {
-        width: 70rem;
+        width: 100vw;
         margin: 2.658rem auto;
     }
 }
