--- a/Local Turístico/style.css
+++ b/Local Turístico/style.css
@@ -9,10 +9,11 @@
 body {
     font-size: 1rem;
     font-family: "Open Sans", serif;
+
 }
 
 article#title-page {
-    margin: 2.658rem auto;
+    width: 100vw;
 }
 
 section + section {
@@ -20,6 +21,7 @@ section + section {
 }
 
 img {
+    width: 100%;
     border-radius: 1.75rem;
 }
 
