--- a/travelgram/styles/footer.css
+++ b/travelgram/styles/footer.css
@@ -2,6 +2,8 @@ footer {
     display: flex;
     gap: 1.5rem;
     padding-block: 1.5rem;
+
+    font: 0.875rem/150% var(--font-family);
 }
 
 footer span:nth-child(1) {
