--- a/travelgram/styles/main.css
+++ b/travelgram/styles/main.css
@@ -1,12 +1,22 @@
+@media screen and (min-width: 992px) {
+    main {
+        gap: 1.5rem;
+    }
+
+    main img {
+        width: 17.875rem;
+        height: 17.875rem; /* 286px */
+    }
+}
+
 main {
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    justify-content: center;
+
     padding-block: 1.5rem;
 }
 
 main img {
-    width: 17.875rem;
-    height: 17.875rem; /* 286px */
     object-fit: cover;
 }
