--- a/travelgram/styles/nav.css
+++ b/travelgram/styles/nav.css
@@ -1,3 +1,17 @@
+@media screen and (min-width: 992px) {
+    #mobile-menu {
+        display: none;
+    }
+
+    nav ul {
+        gap: 1.5rem;
+    }
+
+    menu#itens {
+        display: none;
+    }
+}
+
 nav {
     display: flex;
     flex-flow: row nowrap;
@@ -12,7 +26,7 @@ nav ul {
     list-style-type: none;
     display: flex;
     align-items: center;
-    gap: 1.5rem;
+    
 
     padding-block: 0.5rem;
 }
