--- a/travelgram/styles/mobile.css
+++ b/travelgram/styles/mobile.css
@@ -88,15 +88,18 @@
     }
 
     menu#itens {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        margin-right: 1.2rem;
-        gap: 1rem;
+        position: absolute;
+        top: 60px; /* Ajuste conforme necessário */
+        right: 10px; /* Coloca o menu na direita */
+        background: var(--background-color);
+        border-radius: 5px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        /*padding: 0.6rem;*/
+        display: none; /* Começa oculto */
+        z-index: 100;
 
         font: var(--text-md);
         color: var(--text-color-secondary);
-        display: none;
     }
 
     #itens ul {
