--- a/travelgram/styles/footer.css
+++ b/travelgram/styles/footer.css
@@ -1,11 +1,9 @@
 footer {
     display: flex;
+    justify-content: space-between;
     gap: 1.5rem;
     padding-block: 1.5rem;
 
     font: 0.875rem/150% var(--font-family);
 }
 
-footer span:nth-child(1) {
-    margin-right: auto;
-}
