--- a/travelgram/styles/mobile.css
+++ b/travelgram/styles/mobile.css
@@ -1,4 +1,8 @@
 @media screen and (max-width: 440px) {
+    header #profile h1 {
+        font: bold 1.4rem/125% var(--font-family) !important;
+    }
+
     main {
         gap: 0.3rem !important;
     }
@@ -13,83 +17,130 @@
         /* Ajuste do tamanho do logo */
     #logo img {
         max-width: 9rem; /* Permite que o logo encolha suavemente */
+        height: auto;
         transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
     /* Ajuste do tamanho do input */
-    #mobile-menu input {
+    #primary-menu input {
         width: 6.7rem; /* Reduzindo o tamanho do input */
     }
 
-    div#mobile-menu {
-        gap: 0.2rem;
+    #primary-menu {
+        margin-right: 0.2rem;
     }
 }
 
 @media screen and (min-width: 490px) {
-    #mobile-menu input {
+    #primary-menu input {
         width: 11rem; /* Mantendo o tamanho grande em telas maiores */
         transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
-    div#mobile-menu {
-        gap: 0.35rem;
+    #primary-menu {
+        margin-right: 0.35rem;
+    }
+
+    nav {
+        flex-direction: row;
+        align-items: center !important;
+    }
+}
+
+@media screen and (max-width:570px) {
+    footer {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        font: 0.8rem/150% var(--font-family);
     }
 }
 
 @media screen and (min-width: 570px) and (max-width: 700px) {
-    #mobile-menu input {
+    #primary-menu input {
         width: 15rem; /* Mantendo o tamanho grande em telas maiores */
         transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
-    div#mobile-menu {
-        gap: 0.5rem;
+    #primary-menu {
+        margin-right: 0.5rem;
     }
 }
 
 @media screen and (min-width: 700px) and (max-width: 992px) {
-    #mobile-menu input {
+    #primary-menu input {
         width: 23rem; /* Mantendo o tamanho grande em telas maiores */
         transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
-    div#mobile-menu {
-        gap: 0.5rem;
+    #primary-menu {
+        margin-right: 0.5rem;
+    }
+
+    div#profile p {
+        display: block !important;
+        width: 70vw;
+        transition: transform 0.3s ease-in-out; /* Animação suave */
+        font: 0.79rem/170% var(--font-family) !important;
+    }
+
+    header #info {
+        display: flex;
+        width: 70vw;
+        height: 12rem;
+        flex-direction: row;
+        row-gap: 6rem !important;
+        transition: transform 0.3s ease-in-out; /* Animação suave */
+    }
+
+    header #info {
+        position: absolute;
+        top: 148px !important;
+        transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 }
 
 @media screen and (max-width: 992px) {
+    #primary-menu li:nth-child(2) {
+        width: 1.5rem;
+    }
+
+    .hidden {
+        display: none;
+    }
+
     #primary-menu {
-        display: none;
-    }
-
-    #mobile-menu {
         cursor: pointer;
-        display: flex;
+        position: absolute;
+        top: 14px;
+        right: 62px; /* Coloca o menu na direita */
     }
 
-    #mobile-menu label {
+    #primary-menu label {
         display: none;
     }
 
-    #mobile-menu input {
+    #primary-menu input {
         display: none;
         border: none;
         outline: none;
+        padding-block: 0.25rem;
         border-radius: 2rem;
-        padding-block: 0.38rem;
         text-indent: 0.8rem;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        transition: opacity 0.3s ease-in-out;
     }
 
     div#mobile-menu {
-        display: flex;
-        justify-content: flex-end;
+        position: absolute;
+        top: 20px; /* Mantém ele sempre no meio vertical */
+        right: 32px; /* Coloca o menu na direita */
     }
 
     menu#itens {
         position: absolute;
-        top: 60px; /* Ajuste conforme necessário */
+        top: 60px;
         right: 10px; /* Coloca o menu na direita */
         background: var(--background-color);
         border-radius: 5px;
@@ -129,25 +180,16 @@
     }
 
     header #info {
-        display: none;
+        position: absolute;
+        top: 146px;
+        left: 188px;
+        gap: 1.1rem;
     }
 
-    header #info-mobile {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-    }
 
-    header #info-mobile li {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 0.5rem;
-    }
-
-    header #info-mobile img {
-        width: 1.3rem;
-        height: 1.3rem;
+    header #info img {
+        width: 1.2rem !important;
+        height: 1.2rem !important;
     }
 
     main {
