--- a/portal-de-noticias/styles/sections.css
+++ b/portal-de-noticias/styles/sections.css
@@ -29,6 +29,9 @@
 
             padding: 1.5rem;
 
+            &:has(.text-lg) {
+                padding: 0.75rem;
+            }
             h2 {
                 margin-top: 0.5rem;
             }
