--- a/travelgram/styles/mobile.css
+++ b/travelgram/styles/mobile.css
@@ -94,9 +94,7 @@
         transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
-    header #info {
-        position: absolute;
-        top: 148px !important;
+    header #box-info {
         transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 }
@@ -183,7 +181,7 @@
         position: absolute;
         top: 146px;
         left: 188px;
-        gap: 1.1rem;
+        gap: 0.5rem;
     }
 
 
