--- a/portal-de-noticias/styles/mobile.css
+++ b/portal-de-noticias/styles/mobile.css
@@ -70,6 +70,11 @@
 }
 
 @media screen and (max-width: 660px) {
+    #featured div.screen01 {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+    }
 
     #ai {
         article.screen {
@@ -152,6 +157,7 @@
         &:has(.text-lg) {
             padding: 0.75rem;
         }
+
         h2 {
             margin-top: 0.5rem;
 
@@ -180,6 +186,10 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
+    }
+
+    #ads {
+        margin: auto;
     }
 
     #more {
