--- a/formulario-de-matricula/styles/fields/input.css
+++ b/formulario-de-matricula/styles/fields/input.css
@@ -23,7 +23,7 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
     outline: .25rem solid var(--surface-secondary);
-    border: .125 solid var(--stoke-hightlight);
+    border: .125 solid var(--stroke-highlight);
     outline-offset: .1px;
 }
 
