criando mobile-page

--- a/formulario-de-matricula/styles/global.css
+++ b/formulario-de-matricula/styles/global.css
@@ -52,3 +52,11 @@ img {
 .flex-2 {
     flex: 2;
 }
+
+.mobile-mode-secondary main {
+    display: block;
+}
+
+aside .mobile-mode-primary {
+    display: none;
+}
