--- a/formulario-de-matricula/styles/mobile.css
+++ b/formulario-de-matricula/styles/mobile.css
@@ -12,7 +12,7 @@
         flex-direction: column;
         justify-items: center;
         align-items: center;
-        overflow-y: auto;
+        overflow: auto;
     }
 
     aside .mobile-mode-primary {
