--- a/formulario-de-matricula/styles/mobile.css
+++ b/formulario-de-matricula/styles/mobile.css
@@ -3,6 +3,8 @@
         display: none;
         width: 100vw;
         height: 100vh;
+
+        transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
     aside {
@@ -12,12 +14,14 @@
         flex-direction: column;
         justify-items: center;
         align-items: center;
+
+        transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
     aside .mobile-mode-primary {
         margin-top: 1.5rem;
         display: flex;
-        flex-direction: column;
+        flex-flow: column nowrap;
         justify-content: center;
         align-items: center;
     }
