--- a/formulario-de-matricula/styles/mobile.css
+++ b/formulario-de-matricula/styles/mobile.css
@@ -14,7 +14,7 @@
         flex-direction: column;
         justify-items: center;
         align-items: center;
-        overflow: auto;
+        overflow-y: auto;
         transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
