--- a/formulario-de-matricula/styles/mobile.css
+++ b/formulario-de-matricula/styles/mobile.css
@@ -10,6 +10,10 @@
         transition: transform 0.3s ease-in-out; /* Animação suave */
     }
 
+    .mobile-mode-secondary main .main-container {
+        margin: auto;
+    }
+    
     aside {
         width: 100vw;
         height: 100vh;
