--- a/formulario-de-matricula/styles/mobile.css
+++ b/formulario-de-matricula/styles/mobile.css
@@ -4,6 +4,7 @@
     }
 
     .mobile-mode-secondary main {
+        margin-top: 2rem;
         width: 100vw;
         height: 100vh;
 
@@ -46,6 +47,6 @@
     }
 
     button {
-        margin-bottom: 3rem;
+        margin-bottom: 2.2rem;
     }
 }
