--- a/portfolio-dev/styles/fonts.css
+++ b/portfolio-dev/styles/fonts.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wdth@50..200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
+
+
+/*
 @font-face {
     font-family: "Asap";
     src: url(../assets/fonts/Asap/static/Asap-Bold.ttf) format("truetype");
@@ -12,3 +17,4 @@
     font-family: "Maven Pro";
     src: url(../assets/fonts/Maven_Pro/static/MavenPro-Regular.ttf) format("truetype"), url(../assets/fonts/Maven_Pro/MavenPro-VariableFont_wght.ttf) format("truetype");
 }
+*/
