--- a/portfolio-dev/styles/global.css
+++ b/portfolio-dev/styles/global.css
@@ -77,4 +77,9 @@ img {
     max-width: 100%;
 }
 
-
+.flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
