--- a/portfolio-dev/styles/layout.css
+++ b/portfolio-dev/styles/layout.css
@@ -18,3 +18,9 @@ aside.aside-container {
     margin: auto;
 }
 
+section.section-container {
+    max-width: 85.375rem;
+    height: 49.19rem;
+    margin: auto;
+}
+
