--- a/portfolio-dev/styles/global.css
+++ b/portfolio-dev/styles/global.css
@@ -40,10 +40,6 @@ body {
 
 }
 
-.subtitle {
-    font: var(--subtitle);
-}
-
 .red {
     color: var(--red);
 }
@@ -52,8 +48,13 @@ body {
     color: var(--gray-400);
 }
 
+.purple {
+    color: var(--purple);
+}
+
 h1 {
     font: var(--h1);
+    color: var(--gray-600);
 }
 
 h2 {
@@ -62,10 +63,25 @@ h2 {
 
 h3 {
     font: var(--h3);
+    color: var(--gray-600);
+}
+
+span {
+    color: var(--gray-500);
+}
+
+.subtitle {
+    font: var(--subtitle);
+}
+
+p.text-md {
+    font: var(--text-md);
+    color: var(--gray-500);
 }
 
 p.text-sm {
     font: var(--text-sm);
+    color: var(--gray-500);
 }
 
 a {
@@ -80,6 +96,5 @@ img {
 .flex {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
