--- a/portfolio-dev/styles/main.css
+++ b/portfolio-dev/styles/main.css
@@ -21,8 +21,13 @@ main div.project-container {
 main div.project-container figure {
     width: 20.625rem;
     height: 17.5rem;
+    border: 1px solid transparent;
     background-color: var(--gray-300);
     border-radius: .75rem;
+}
+
+main div.project-container figure:hover {
+    border: 1px solid var(--gray-400);
 }
 
 main div.project-container img {
