--- a/portal-de-noticias/styles/mobile.css
+++ b/portal-de-noticias/styles/mobile.css
@@ -1,8 +1,34 @@
 @media screen and (max-width: 660px) {
 
+    #primary {
+        padding-block: 1.25rem;
+    }
+    
+    #primary div {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
+    
+    #primary div:nth-child(1) {
+        justify-self: left;
+    }
+
+    #primary div:nth-child(2) {
+        margin-inline: auto;
+    }
+    
+    #primary div:nth-child(3) {
+        justify-self: end;
+    }
+    
     /* Impede que o main transborde */
     main.container {
         overflow-x: hidden !important;
+    }
+
+    #featured figure.card figcaption > h2.mobile-h2 {
+        font: 600 1.2rem/135% var(--font-family);
     }
     
     #featured div.screen01, #weekly div.screen01 {
@@ -50,86 +76,92 @@
         z-index: 1; /* Garante que o span fique por cima */
     }
 
-    #ai {
 
-        header {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
 
-        header h3 {
-            margin: 0;
-            white-space: nowrap;  /* Impede que o texto quebre */
-        }
+#ai header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#ai header h3 {
+    margin: 0;
+    white-space: nowrap;  /* Impede que o texto quebre */
+}
+
+#ai header a {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    text-decoration: none;
+}
+
+#ai article.screen {
+    grid-template-areas: 
+    "img img img"
+    "span span ."
+    "h3 h3 h3"
+    "p p p";
+}
+
+#ai article.screen div:nth-child(2) {
+    grid-area: img;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
+
+#ai article.screen img {
+    width: 100%; /* Mantém um tamanho proporcional */
+    max-width: 300px; /* Limita o tamanho máximo */
+    aspect-ratio: 16 / 9; /* Proporção de retrato (16:9) */
+    object-fit: cover; /* Garante que a imagem não deforme */
+    border-radius: 0.5rem;
+}
+
+#ai h3, #ai p {
+    margin-top: 1rem;
+}
+
+#ai p {
+    display: -webkit-box; /* Define um contêiner flexível para texto */
+    -webkit-box-orient: vertical; /* Orientação vertical */
+    -webkit-line-clamp: 4; /* Limita a 3 linhas */
+    overflow: hidden; /* Esconde o excesso de texto */
+    text-overflow: ellipsis; /* Adiciona "..." no final */
+}
     
-        header a {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            text-decoration: none;
-        }
-
-        article.screen {
-            grid-template-areas: 
-            "img img img"
-            "span span ."
-            "h3 h3 h3"
-            "p p p";
-        }
-
-        article.screen div:nth-child(2) {
-            grid-area: img;
-            width: 100%;
-            height: auto;
-            display: flex;
-            justify-content: center;
-        }
-
-        #ai article.screen img {
-            width: 100%; /* Mantém um tamanho proporcional */
-            max-width: 300px; /* Limita o tamanho máximo */
-            aspect-ratio: 16 / 9; /* Proporção de retrato (16:9) */
-            object-fit: cover; /* Garante que a imagem não deforme */
-            border-radius: 0.5rem;
-        }
-
-        h3, p {
-            margin-top: 1rem;
-        }
-
-        p {
-            display: -webkit-box; /* Define um contêiner flexível para texto */
-            -webkit-box-orient: vertical; /* Orientação vertical */
-            -webkit-line-clamp: 4; /* Limita a 3 linhas */
-            overflow: hidden; /* Esconde o excesso de texto */
-            text-overflow: ellipsis; /* Adiciona "..." no final */
-        }
-    }
 
     #more {
-
         margin-top: 2rem;
-
-        article {
-            margin-bottom: 2rem;
-            width: 100%;
-        }
-
-        div h3 {
-            margin-top: 0.5rem;        
-            font-size: clamp(0.7rem, 50%, 2rem);
-        }
-
-        img {
-            width: 6rem;
-            height: 6rem;
-            aspect-ratio: 1/1;
-            object-fit: cover;
-        }
     }
+
+    #more article {
+        margin-bottom: 2rem;
+        width: 100%;
+    }
+
+    #more div h3 {
+        margin-top: 0.5rem;        
+        font-size: clamp(0.7rem, 50%, 2rem);
+
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    #more img {
+        width: 6rem;
+        height: 6rem;
+        aspect-ratio: 1/1;
+        object-fit: cover;
 }
+}
+    
 
 @media screen and (max-width: 992px) {
     nav#primary strong {
@@ -146,108 +178,128 @@
 }
 
 @media screen and (min-width: 660px) and (max-width: 1280px) {
-    
-    #weekly div {
-        span {
-            margin-bottom: 0.5rem;
-        }
+
+    #primary {
+        padding-block: 1.25rem;
     }
     
-    .card {
-        border-radius: 0.25rem;
-        overflow: hidden;
+    #primary div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0.5rem;
+    }
 
-        position: relative;
+    #primary div:nth-child(1) {
+        justify-self: left;
+    }
+    
+    #primary div:nth-child(2) {
+        margin-inline: auto;
+    }
+    
+    #primary div:nth-child(3) {
+        justify-self: end;
+    }
+    
+    
+#weekly div span{
+    margin-bottom: 0.5rem;
+}
+    
+.card {
+    border-radius: 0.25rem;
+    overflow: hidden;
+    position: relative;
         /* & substitui o .card::before */
-        &::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            top: 50%;
-            background: linear-gradient(
-                180deg, 
-                transparent 0%,
-                #020617 100%
-            );
-        }
-    }
+}
+       
+.card::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    top: 50%;
+    background: linear-gradient(
+        180deg, 
+        transparent 0%,
+        #020617 100%
+    );
+}
 
-    figcaption {
+figcaption {
 
-        position: absolute;
-        bottom: 0;
+    position: absolute;
+    bottom: 0;
 
-        padding: 1.5rem;
+    padding: 1.5rem;
+ }
 
-        &:has(.text-lg) {
-            padding: 0.75rem;
-        }
+ figcaption:has(.text-lg) {
+    padding: 0.75rem;
+}
 
-        h2 {
-            margin-top: 0.5rem;
+figcaption h2 {
+    margin-top: 0.5rem;
 
-            display: -webkit-box; /* Define um contêiner flexível para texto */
-            -webkit-box-orient: vertical; /* Orientação vertical */
-            -webkit-line-clamp: 3; /* Limita a 3 linhas */
-            overflow: hidden; /* Esconde o excesso de texto */
-            text-overflow: ellipsis; /* Adiciona "..." no final */
-        }
-    }
+    display: -webkit-box; /* Define um contêiner flexível para texto */
+    -webkit-box-orient: vertical; /* Orientação vertical */
+    -webkit-line-clamp: 3; /* Limita a 3 linhas */
+    overflow: hidden; /* Esconde o excesso de texto */
+    text-overflow: ellipsis; /* Adiciona "..." no final */
+}
+   
+#ai span {
+    margin-bottom: 0.5rem;
+}
 
-    #ai {
+#ai img {
+    width: 14rem;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
 
-        span {
-            margin-bottom: 0.5rem;
-        }
+#ai p {
+    margin-top: 0.2rem;
+    text-indent: 1.1rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+    
 
-        img {
-            width: 14rem;
-            aspect-ratio: 1/1;
-            object-fit: cover;
-        }
+#ads {
+    margin: auto;
+}
 
-        p {
-            margin-top: 0.2rem;
-            text-indent: 1.1rem;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 5;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-    }
+#more {        
+    margin-top: 2rem;
+}
 
-    #ads {
-        margin: auto;
-    }
+#more article {
+    margin-bottom: 2rem;
+    max-width: 81%;
+}
 
-    #more {        
-        margin-top: 2rem;
+#more div h3 {
+    width: 100%;
+    margin-top: 0.5rem;
+    font: var(--text-extra-sm);
 
-        article {
-            margin-bottom: 2rem;
-            max-width: 81%;
-        }
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
-        div h3 {
-            width: 100%;
-            margin-top: 0.5rem;
-            font: var(--text-extra-sm);
-
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 3;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        img {
-            width: 6.2rem;
-            height: 6.2rem;
-            aspect-ratio: 1/1;
-            object-fit: cover;
-        }
-    }   
+#more img {
+    width: 6.2rem;
+    height: 6.2rem;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
 }
 
 @media screen and (max-width: 1280px) {
