--- a/Zingen/styles/global.css
+++ b/Zingen/styles/global.css
@@ -1,5 +1,87 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font: inherit; /* reseta a fonte padrão */
+
+    /* motor que funciona no Safari e no Chrome, arruma uma fonte para ficar mais suave*/
+    -webkit-font-smoothing: antialiased;
+    /* motor que funciona no Mozilla, a fonte fica mais suave, um pouquinho mais fina*/
+    -moz-osx-font-smoothing: grayscale;
+}
+
+:root {
+    --bg-color: #09090B;
+    --surface-color: #18181B;
+    --stroke-color: #27272A;
+    --text-color-primary: #F4F4F5;
+    --text-color-secondary: #A1A1AA;
+    
+    --brand-color-primary: #f7b733;
+    --brand-color-secondary: #fc4a1a;
+
+    --font-family: "Inter", system-ui, sans-serif;
+    --fw-base: 400;
+    --fw-md: 500;
+    --fw-bold: 800;
+
+    --fs-sm: 0.875rem;
+    --fs-base: 1rem;
+    --fs-lg: 1.25rem;
+    --fs-xl: 1.5rem;
+    --fs-2xl: 2.5rem;
+}
+
+html {
+    font-family: var(--font-family);
+    font-weight: var(--fw-base);
+    font-size: var(--fs-base);
+    line-height: 1.6;
+    color: var(--text-color-primary);
+}
+
+body {
+    background-color: var(--bg-color);
+}
+
+h1, h2, h3 {
+    line-height: 1.2;
+    color: var(--text-color-primary);
+    font-weight: var(--fw-bold);
+    letter-spacing: -0.04em;
+}
+
+h1 {
+    font-size: var(--fs-2xl);
+}
+
+h2 {
+    font-size: var(--fs-xl);
+}
+
+h3 {
+    font-size: var(--fs-lg);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul[role="list"] {
+    list-style: none;
+}
+
+/* 'em' sempre vai buscar a fonte no pai da media no caso é o root */
+@media (width >= 80em) {
+    :root {
+        --fs-lg: 2rem;
+        --fs-xl: 3rem;
+        --fs-2xl: 4rem;
+    }
 }
