--- a/portal-de-noticias/styles/mobile.css
+++ b/portal-de-noticias/styles/mobile.css
@@ -129,6 +129,7 @@
     display: -webkit-box; /* Define um contêiner flexível para texto */
     -webkit-box-orient: vertical; /* Orientação vertical */
     -webkit-line-clamp: 4; /* Limita a 3 linhas */
+    line-clamp: 4;
     overflow: hidden; /* Esconde o excesso de texto */
     text-overflow: ellipsis; /* Adiciona "..." no final */
 }
@@ -150,6 +151,7 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 3;
+        line-clamp: 3;
         overflow: hidden;
         text-overflow: ellipsis;
     }
@@ -244,6 +246,7 @@ figcaption h2 {
     display: -webkit-box; /* Define um contêiner flexível para texto */
     -webkit-box-orient: vertical; /* Orientação vertical */
     -webkit-line-clamp: 3; /* Limita a 3 linhas */
+    line-clamp: 3;
     overflow: hidden; /* Esconde o excesso de texto */
     text-overflow: ellipsis; /* Adiciona "..." no final */
 }
@@ -264,6 +267,7 @@ figcaption h2 {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 5;
+    line-clamp: 5;
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -290,6 +294,7 @@ figcaption h2 {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
+    line-clamp: 3;
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -310,7 +315,10 @@ figcaption h2 {
         display: flex; /* Garante que os links fiquem em linha */
         gap: 1rem; /* Adiciona um espaçamento entre os itens */
         padding-bottom: 0.5rem; /* Dá um espacinho extra para não cortar */
-        scrollbar-width: none; /* Ajusta a largura do scrollbar no Firefox */
+    }
+
+    #secondary::-webkit-scrollbar {
+        display: none; /* Ajusta a largura do scrollbar no Firefox */
     }
 
     /* Adiciona scroll horizontal na seção "Mais lidas da semana" */
@@ -320,7 +328,10 @@ figcaption h2 {
 
         gap: 1rem; /* Espaçamento entre os itens */
         padding-bottom: 0.5rem;
-        scrollbar-width: none;
+    }
+
+    #weekly > div::-webkit-scrollbar {
+        display: none; 
     }
 
     #weekly figure {
@@ -332,6 +343,7 @@ figcaption h2 {
         display: -webkit-box; /* Define um contêiner flexível para texto */
         -webkit-box-orient: vertical; /* Orientação vertical */
         -webkit-line-clamp: 3; /* Limita a 3 linhas */
+        line-clamp: 3;
         overflow: hidden; /* Esconde o excesso de texto */
         text-overflow: ellipsis; /* Adiciona "..." no final */
     }
