--- a/Zingen/styles/utility.css
+++ b/Zingen/styles/utility.css
@@ -20,7 +20,6 @@
     --max-width: 375px;
     width: min(var(--max-width), 100% - var(--px-lg) * 2);
     margin: auto;
-    border: 1px solid red;
 }
 
 .desktop-only {
@@ -36,8 +35,16 @@
     display: flex;
 }
 
+.itemscenter {
+    align-items: center;
+}
+
 .gap-1 {
     gap: 1rem;
+}
+
+.gap-1\.5 {
+    gap: 1.5rem;
 }
 
 .grid {
