--- a/Zingen/styles/global.css
+++ b/Zingen/styles/global.css
@@ -46,7 +46,7 @@
 }
 
 html {
-    font-family: var(--font-family);
+    font-family: var(--ff-sans);
     font-weight: var(--fw-base);
     font-size: var(--fs-base);
     line-height: 1.6;
@@ -55,6 +55,7 @@ html {
 
 body {
     background-color: var(--bg-color);
+    overflow-x: hidden;
 }
 
 h1, h2, h3 {
